# yandex-money-rs

./: Cargo.toml  README.md
yandex-money/: Cargo.toml
yandex-money-cli/: Cargo.toml
yandex-money-cli/src/: main.rs
yandex-money/src/: lib.rs  models.rs  transport.rs
