[package]
name = "yandex-money"
version = "0.1.0"
description = "Yandex.Money API library"
repository = "https://github.com/vorot93/yandex-money-rs"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
categories = ["api"]
license = "Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "vorot93/yandex-money-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
async-stream = "0.2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.1", features = ["serde"] }
http = "0.2"
itertools = "0.8"
log = "0.4"
maplit = "1"
phonenumber = "0.2"
parking_lot = "0.10"
reqwest = { version = "0.10", features = ["json"] }
ron = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "*"
snafu = "*"
strum = { version = "*", features = ["derive"] }
tokio = { version = "0.2", features = ["stream"] }
uuid = { version = "*", features = ["v4"] }
